# rust-todo-cli

./: .rustc_info.json  Cargo.toml  README.md  test.json
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/atty/: enum.Stream.html  fn.is.html  fn.isnt.html
doc/chrono/: all.html  constant.MAX_DATE.html  constant.MAX_DATETIME.html  constant.MIN_DATE.html  constant.MIN_DATETIME.html  enum.Month.html  enum.RoundingError.html  enum.SecondsFormat.html  enum.Weekday.html  index.html  struct.Date.html  struct.DateTime.html  struct.Duration.html  struct.Months.html  struct.OutOfRangeError.html  struct.ParseMonthError.html  struct.ParseWeekdayError.html  trait.Datelike.html  trait.DurationRound.html  trait.SubsecRound.html  trait.Timelike.html
doc/clap/: enum.AppSettings.html  enum.ErrorKind.html  struct.Arg.html  struct.ArgMatches.html  struct.OsValues.html
doc/itoa/: index.html
doc/libc/: index.html
doc/proc_macro2/: index.html
doc/quote/: index.html
doc/rust_todo/: all.html  fn.main.html  index.html  sidebar-items.js
doc/ryu/: index.html
doc/serde/: index.html  trait.Deserialize.html  trait.Serialize.html  trait.Serializer.html
doc/serde_derive/: index.html
doc/serde_json/: index.html  struct.Deserializer.html  struct.Serializer.html
doc/syn/: enum.GenericArgument.html  enum.PathArguments.html  enum.ReturnType.html  enum.TraitBoundModifier.html  enum.WherePredicate.html  index.html  struct.Abi.html  struct.AngleBracketedGenericArguments.html  struct.BareFnArg.html  struct.Binding.html  (+33 more)
src/: cli.rs  main.rs  tasks.rs
(+687 files in other folders)
