[package]
name = "rust-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"

structopt = "0.3.26"

[dependencies.chrono]
features = ["serde"]
version = "0.4.23"

[dependencies.serde]
features = ["derive"]
version = "1.0.151"